--- a/arquivos-kubernetes/eureka-deployment.yaml
+++ b/arquivos-kubernetes/eureka-deployment.yaml
@@ -6,8 +6,8 @@ metadata:
     kompose.version: 1.18.0 (06a2e56)
   creationTimestamp: null
   labels:
-    io.kompose.service: order-service
-  name: order-service
+    io.kompose.service: eureka
+  name: eureka
 spec:
   replicas: 1
   strategy: {}
@@ -15,13 +15,13 @@ spec:
     metadata:
       creationTimestamp: null
       labels:
-        io.kompose.service: order-service
+        io.kompose.service: eureka
     spec:
       containers:
-      - image: order-service:0.1
-        name: order
+      - image: eureka:0.1
+        name: eureka
         ports:
-        - containerPort: 8002
+        - containerPort: 8761
         resources: {}
         imagePullPolicy: Never
       restartPolicy: Always
