--- a/arquivos-kubernetes/eureka-service.yaml
+++ b/arquivos-kubernetes/eureka-service.yaml
@@ -6,15 +6,14 @@ metadata:
     kompose.version: 1.18.0 (06a2e56)
   creationTimestamp: null
   labels:
-    io.kompose.service: order-service
-  name: order-service
+    io.kompose.service: eureka
+  name: eureka
 spec:
   ports:
-  - name: "8002"
-    port: 8002
-    targetPort: 8002
-    imagePullPolicy: Never
+  - name: "8761"
+    port: 8761
+    targetPort: 8761
   selector:
-    io.kompose.service: order-service
+    io.kompose.service: eureka
 status:
   loadBalancer: {}
