--- a/arquivos-kubernetes/order-updater-service-deployment.yaml
+++ b/arquivos-kubernetes/order-updater-service-deployment.yaml
@@ -18,10 +18,11 @@ spec:
         io.kompose.service: order-updater-service
     spec:
       containers:
-      - image: order-updater-service
+      - image: order-complete-updater:0.1
         name: order-updater
         ports:
         - containerPort: 8005
         resources: {}
+        imagePullPolicy: Never
       restartPolicy: Always
 status: {}
