--- a/arquivos-kubernetes/greenhouse-delivery-deployment.yaml
+++ b/arquivos-kubernetes/greenhouse-delivery-deployment.yaml
@@ -1,86 +1,103 @@
-apiVersion: v1
-kind: Pod
+kind: Deployment
+apiVersion: extensions/v1beta1
 metadata:
-  name: greenhouse-delivery
+  name: nginx-deployment
 spec:
-
-  restartPolicy: Never
-
-  volumes:
-  - name: shared-data
-    emptyDir: {}
+  # A deployment's specification really only 
+  # has a few useful options
   
-  containers:
-  - image: rabbitmq:3-management
-    name: rabbitmq
-    ports:
-    - containerPort: 5672
-    - containerPort: 15672
-    resources: {}
-    imagePullPolicy: Never
-    restartPolicy: Always
+  # 1. How many copies of each pod do we want?
+  replicas: 3
 
-  - image: mongo:latest
-    name: mongodb
-    ports:
-    - containerPort: 27017
-    resources: {}
-    imagePullPolicy: Never
-    restartPolicy: Always
+  # 2. How do want to update the pods?
+  strategy: Recreate
 
-  - image: eureka:0.1
-    name: eureka
-    ports:
-    - containerPort: 8761
-    resources: {}
-    imagePullPolicy: Never
-    restartPolicy: Always
+  # 3. Which pods are managed by this deployment?
+  selector:
+    # This must match the labels we set on the pod!
+    matchLabels:
+      deploy: greenhouse-delivery
+  
+  # This template field is a regular pod configuration 
+  # nested inside the deployment spec
+  template:
+    metadata:
+      # Set labels on the pod.
+      # This is used in the deployment selector.
+      labels:
+        deploy: greenhouse-delivery
+    spec:
+      containers:
+        - image: rabbitmq:3-management
+          name: rabbitmq
+          ports:
+          - containerPort: 5672
+          - containerPort: 15672
+          resources: {}
+          imagePullPolicy: Never
+          restartPolicy: Always
 
-  - image: hystrix:0.1
-    name: hystrix
-    ports:
-    - containerPort: 7979
-    resources: {}
-    imagePullPolicy: Never
-    restartPolicy: Always
+        - image: mongo:latest
+          name: mongodb
+          ports:
+          - containerPort: 27017
+          resources: {}
+          imagePullPolicy: Never
+          restartPolicy: Always
 
-  - image: restaurant-service:0.1
-    name: restaurant-service
-    ports:
-    - containerPort: 8001
-    resources: {}
-    imagePullPolicy: Never
-    restartPolicy: Always
+        - image: eureka:0.1
+          name: eureka
+          ports:
+          - containerPort: 8761
+          resources: {}
+          imagePullPolicy: Never
+          restartPolicy: Always
 
-  - image: order-service:0.1
-    name: order-service
-    ports:
-    - containerPort: 8002
-    resources: {}
-    imagePullPolicy: Never
-    restartPolicy: Always
+        - image: hystrix:0.1
+          name: hystrix
+          ports:
+          - containerPort: 7979
+          resources: {}
+          imagePullPolicy: Never
+          restartPolicy: Always
 
-  - image: payment-distribution:0.1
-    name: payment-distribution
-    ports:
-    - containerPort: 8003
-    resources: {}
-    imagePullPolicy: Never
-    restartPolicy: Always
+        - image: restaurant-service:0.1
+          name: restaurant-service
+          ports:
+          - containerPort: 8001
+          resources: {}
+          imagePullPolicy: Never
+          restartPolicy: Always
 
-  - image: payment-service:0.1
-    name: payment-service
-    ports:
-    - containerPort: 8004
-    resources: {}
-    imagePullPolicy: Never
-    restartPolicy: Always
+        - image: order-service:0.1
+          name: order-service
+          ports:
+          - containerPort: 8002
+          resources: {}
+          imagePullPolicy: Never
+          restartPolicy: Always
 
-  - image: order-complete-updater:0.1
-    name: order-complete-updater
-    ports:
-    - containerPort: 8005
-    resources: {}
-    imagePullPolicy: Never
-    restartPolicy: Always
+        - image: payment-distribution:0.1
+          name: payment-distribution
+          ports:
+          - containerPort: 8003
+          resources: {}
+          imagePullPolicy: Never
+          restartPolicy: Always
+
+        - image: payment-service:0.1
+          name: payment-service
+          ports:
+          - containerPort: 8004
+          resources: {}
+          imagePullPolicy: Never
+          restartPolicy: Always
+
+        - image: order-complete-updater:0.1
+          name: order-complete-updater
+          ports:
+          - containerPort: 8005
+          resources: {}
+          imagePullPolicy: Never
+          restartPolicy: Always
 
