--- a/arquivos-kubernetes/greenhouse-delivery-deployment.yaml
+++ b/arquivos-kubernetes/greenhouse-delivery-deployment.yaml
@@ -1,41 +1,39 @@
-kind: Deployment
 apiVersion: extensions/v1beta1
+kind: Deployment
 metadata:
-  name: nginx-deployment
+  annotations:
+    kompose.cmd: kompose convert
+    kompose.version: 1.18.0 (06a2e56)
+  creationTimestamp: null
+  labels:
+    io.kompose.service: greenhouse-delivery
+  name: greenhouse-delivery
 spec:
-  # A deployment's specification really only 
-  # has a few useful options
-  
-  # 1. How many copies of each pod do we want?
   replicas: 3
-
-  # 2. How do want to update the pods?
-  strategy: Recreate
-
-  # 3. Which pods are managed by this deployment?
-  selector:
-    # This must match the labels we set on the pod!
-    matchLabels:
-      deploy: greenhouse-delivery
-  
-  # This template field is a regular pod configuration 
-  # nested inside the deployment spec
+  strategy: {}
   template:
     metadata:
-      # Set labels on the pod.
-      # This is used in the deployment selector.
+      creationTimestamp: null
       labels:
-        deploy: greenhouse-delivery
+        io.kompose.service: greenhouse-delivery
     spec:
       containers:
-        - image: rabbitmq:3-management
+      - image: hystrix:0.1
+        name: hystrix
+        ports:
+        - containerPort: 7979
+        resources: {}
+        imagePullPolicy: Never
+      restartPolicy: Always
+
+      - image: rabbitmq:3-management
           name: rabbitmq
           ports:
           - containerPort: 5672
           - containerPort: 15672
           resources: {}
           imagePullPolicy: Never
-          restartPolicy: Always
+        restartPolicy: Always
 
         - image: mongo:latest
           name: mongodb
@@ -43,7 +41,7 @@ spec:
           - containerPort: 27017
           resources: {}
           imagePullPolicy: Never
-          restartPolicy: Always
+        restartPolicy: Always
 
         - image: eureka:0.1
           name: eureka
@@ -51,15 +49,7 @@ spec:
           - containerPort: 8761
           resources: {}
           imagePullPolicy: Never
-          restartPolicy: Always
-
-        - image: hystrix:0.1
-          name: hystrix
-          ports:
-          - containerPort: 7979
-          resources: {}
-          imagePullPolicy: Never
-          restartPolicy: Always
+        restartPolicy: Always
 
         - image: restaurant-service:0.1
           name: restaurant-service
@@ -67,7 +57,7 @@ spec:
           - containerPort: 8001
           resources: {}
           imagePullPolicy: Never
-          restartPolicy: Always
+        restartPolicy: Always
 
         - image: order-service:0.1
           name: order-service
@@ -75,7 +65,7 @@ spec:
           - containerPort: 8002
           resources: {}
           imagePullPolicy: Never
-          restartPolicy: Always
+        restartPolicy: Always
 
         - image: payment-distribution:0.1
           name: payment-distribution
@@ -83,7 +73,7 @@ spec:
           - containerPort: 8003
           resources: {}
           imagePullPolicy: Never
-          restartPolicy: Always
+        restartPolicy: Always
 
         - image: payment-service:0.1
           name: payment-service
@@ -91,7 +81,7 @@ spec:
           - containerPort: 8004
           resources: {}
           imagePullPolicy: Never
-          restartPolicy: Always
+        restartPolicy: Always
 
         - image: order-complete-updater:0.1
           name: order-complete-updater
@@ -99,5 +89,5 @@ spec:
           - containerPort: 8005
           resources: {}
           imagePullPolicy: Never
-          restartPolicy: Always
-
+        restartPolicy: Always
+status: {}
