--- a/payment-service/application.yml
+++ b/payment-service/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8080
+  port: 8004
 spring:
   application:
     name: payment-service
@@ -10,5 +10,7 @@ spring:
   data:
     mongodb:
       host: 10.100.3.49
+  rabbitmq:
+    host: 10.108.163.13
 
 
