--- a/arquivos-kubernetes/payment-distribution-service-deployment.yaml
+++ b/arquivos-kubernetes/payment-distribution-service-deployment.yaml
@@ -1,21 +1,20 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
-  annotations:
-    kompose.cmd: kompose convert
-    kompose.version: 1.18.0 (06a2e56)
-  creationTimestamp: null
   labels:
-    io.kompose.service: payment-distribution-service
+    app: payment-distribution-service
   name: payment-distribution-service
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      app: payment-distribution-service
   strategy: {}
   template:
     metadata:
       creationTimestamp: null
       labels:
-        io.kompose.service: payment-distribution-service
+        app: payment-distribution-service
     spec:
       containers:
       - image: payment-distribution:0.1
@@ -24,5 +23,5 @@ spec:
         - containerPort: 8003
         resources: {}
         imagePullPolicy: Never
-      restartPolicy: Always
+      restartPolicy: OnFailure
 status: {}
