--- a/arquivos-kubernetes/eureka-deployment.yaml
+++ b/arquivos-kubernetes/eureka-deployment.yaml
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: v1
 kind: Deployment
 metadata:
   annotations:
@@ -24,5 +24,5 @@ spec:
         - containerPort: 8761
         resources: {}
         imagePullPolicy: Never
-      restartPolicy: Always
+      restartPolicy: OnFailure
 status: {}
