--- a/arquivos-kubernetes/hystrix-deployment.yaml
+++ b/arquivos-kubernetes/hystrix-deployment.yaml
@@ -1,21 +1,19 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
-  annotations:
-    kompose.cmd: kompose convert
-    kompose.version: 1.18.0 (06a2e56)
-  creationTimestamp: null
+  name: hystrix-deployment
   labels:
-    io.kompose.service: hystrix
-  name: hystrix
+    app: hystrix
 spec:
   replicas: 1
-  strategy: {}
+  selector:
+    matchLabels:
+      app: hystrix
   template:
     metadata:
       creationTimestamp: null
       labels:
-        io.kompose.service: hystrix
+        app: hystrix
     spec:
       containers:
       - image: hystrix:0.1
@@ -24,5 +22,4 @@ spec:
         - containerPort: 7979
         resources: {}
         imagePullPolicy: Never
-      restartPolicy: Always
 status: {}
