--- a/arquivos-kubernetes/mongodb-deployment.yaml
+++ b/arquivos-kubernetes/mongodb-deployment.yaml
@@ -1,15 +1,15 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
-  annotations:
-    kompose.cmd: kompose convert
-    kompose.version: 1.18.0 (06a2e56)
   creationTimestamp: null
   labels:
-    io.kompose.service: mongodb
+    app: mongodb
   name: mongodb
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      app: mongodb
   strategy: {}
   template:
     metadata:
@@ -23,5 +23,5 @@ spec:
         ports:
         - containerPort: 27017
         resources: {}
-      restartPolicy: Always
+      restartPolicy: OnFailure
 status: {}
