--- a/arquivos-kubernetes/order-service-deployment.yaml
+++ b/arquivos-kubernetes/order-service-deployment.yaml
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: v1
 kind: Deployment
 metadata:
   annotations:
@@ -6,16 +6,19 @@ metadata:
     kompose.version: 1.18.0 (06a2e56)
   creationTimestamp: null
   labels:
-    io.kompose.service: order-service
+    app: order-service
   name: order-service
 spec:
   replicas: 1
   strategy: {}
+  selector:
+    matchLabels:
+      app: order-service
   template:
     metadata:
       creationTimestamp: null
       labels:
-        io.kompose.service: order-service
+        app: order-service
     spec:
       containers:
       - image: order-service:0.1
@@ -24,5 +27,5 @@ spec:
         - containerPort: 8002
         resources: {}
         imagePullPolicy: Never
-      restartPolicy: Always
+      restartPolicy: OnFailure
 status: {}
