--- a/arquivos-kubernetes/rabbitmq-deployment.yaml
+++ b/arquivos-kubernetes/rabbitmq-deployment.yaml
@@ -1,21 +1,20 @@
-apiVersion: extensions/v1beta1
+apiVersion: v1
 kind: Deployment
 metadata:
-  annotations:
-    kompose.cmd: kompose convert
-    kompose.version: 1.18.0 (06a2e56)
-  creationTimestamp: null
   labels:
-    io.kompose.service: rabbitmq
+    app: rabbitmq
   name: rabbitmq
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      app: rabbitmq
   strategy: {}
   template:
     metadata:
       creationTimestamp: null
       labels:
-        io.kompose.service: rabbitmq
+        app: rabbitmq
     spec:
       containers:
       - image: rabbitmq:3-management
@@ -24,5 +23,5 @@ spec:
         - containerPort: 5672
         - containerPort: 15672
         resources: {}
-      restartPolicy: Always
+      restartPolicy: OnFailure
 status: {}
