--- a/arquivos-kubernetes/eureka-service.yaml
+++ b/arquivos-kubernetes/eureka-service.yaml
@@ -6,7 +6,7 @@ metadata:
     kompose.version: 1.18.0 (06a2e56)
   creationTimestamp: null
   labels:
-    io.kompose.service: eureka
+    app: eureka
   name: eureka
 spec:
   ports:
@@ -14,6 +14,6 @@ spec:
     port: 8761
     targetPort: 8761
   selector:
-    io.kompose.service: eureka
+    app: eureka
 status:
   loadBalancer: {}
