--- a/arquivos-kubernetes/hystrix-service.yaml
+++ b/arquivos-kubernetes/hystrix-service.yaml
@@ -6,7 +6,7 @@ metadata:
     kompose.version: 1.18.0 (06a2e56)
   creationTimestamp: null
   labels:
-    io.kompose.service: hystrix
+    app: hystrix
   name: hystrix
 spec:
   ports:
@@ -14,6 +14,6 @@ spec:
     port: 7979
     targetPort: 7979
   selector:
-    io.kompose.service: hystrix
+    app: hystrix
 status:
   loadBalancer: {}
