--- a/arquivos-kubernetes/mongodb-deployment.yaml
+++ b/arquivos-kubernetes/mongodb-deployment.yaml
@@ -15,7 +15,7 @@ spec:
     metadata:
       creationTimestamp: null
       labels:
-        io.kompose.service: mongodb
+        app: mongodb
     spec:
       containers:
       - image: mongo
@@ -23,5 +23,5 @@ spec:
         ports:
         - containerPort: 27017
         resources: {}
-      restartPolicy: OnFailure
+      restartPolicy: Always
 status: {}
