--- a/arquivos-kubernetes/order-service-deployment.yaml
+++ b/arquivos-kubernetes/order-service-deployment.yaml
@@ -1,4 +1,4 @@
-apiVersion: v1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   annotations:
@@ -27,5 +27,5 @@ spec:
         - containerPort: 8002
         resources: {}
         imagePullPolicy: Never
-      restartPolicy: OnFailure
+      restartPolicy: Always
 status: {}
