--- a/arquivos-kubernetes/order-updater-service-deployment.yaml
+++ b/arquivos-kubernetes/order-updater-service-deployment.yaml
@@ -9,7 +9,7 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      app: order-complete-updater
+      app: order-updater-service
   strategy: {}
   template:
     metadata:
@@ -24,5 +24,5 @@ spec:
         - containerPort: 8005
         resources: {}
         imagePullPolicy: Never
-      restartPolicy: OnFailure
+      restartPolicy: Always
 status: {}
