--- a/arquivos-kubernetes/order-updater-service-service.yaml
+++ b/arquivos-kubernetes/order-updater-service-service.yaml
@@ -6,7 +6,7 @@ metadata:
     kompose.version: 1.18.0 (06a2e56)
   creationTimestamp: null
   labels:
-    io.kompose.service: order-updater-service
+    app: order-updater-service
   name: order-updater-service
 spec:
   ports:
@@ -14,6 +14,6 @@ spec:
     port: 8005
     targetPort: 8005
   selector:
-    io.kompose.service: order-updater-service
+    app: order-updater-service
 status:
   loadBalancer: {}
