--- a/arquivos-kubernetes/payment-service-service.yaml
+++ b/arquivos-kubernetes/payment-service-service.yaml
@@ -6,7 +6,7 @@ metadata:
     kompose.version: 1.18.0 (06a2e56)
   creationTimestamp: null
   labels:
-    io.kompose.service: payment-service
+    app: payment-service
   name: payment-service
 spec:
   ports:
@@ -14,6 +14,6 @@ spec:
     port: 8004
     targetPort: 8004
   selector:
-    io.kompose.service: payment-service
+    app: payment-service
 status:
   loadBalancer: {}
