--- a/arquivos-kubernetes/rabbitmq-deployment.yaml
+++ b/arquivos-kubernetes/rabbitmq-deployment.yaml
@@ -1,4 +1,4 @@
-apiVersion: v1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
@@ -23,5 +23,5 @@ spec:
         - containerPort: 5672
         - containerPort: 15672
         resources: {}
-      restartPolicy: OnFailure
+      restartPolicy: Always
 status: {}
