--- a/arquivos-kubernetes/restaurant-service-deployment.yaml
+++ b/arquivos-kubernetes/restaurant-service-deployment.yaml
@@ -22,5 +22,5 @@ spec:
         ports:
         - containerPort: 8001
         resources: {}
-      restartPolicy: OnFailure
+      restartPolicy: Always
 status: {}
