--- a/arquivos-kubernetes/restaurant-service-service.yaml
+++ b/arquivos-kubernetes/restaurant-service-service.yaml
@@ -6,7 +6,7 @@ metadata:
     kompose.version: 1.18.0 (06a2e56)
   creationTimestamp: null
   labels:
-    io.kompose.service: restaurant-service
+    app: restaurant-service
   name: restaurant-service
 spec:
   ports:
@@ -14,6 +14,6 @@ spec:
     port: 8001
     targetPort: 8001
   selector:
-    io.kompose.service: restaurant-service
+    app: restaurant-service
 status:
   loadBalancer: {}
