correção de label no arquivo de deployment do payment-service

--- a/arquivos-kubernetes/payment-service-deployment.yaml
+++ b/arquivos-kubernetes/payment-service-deployment.yaml
@@ -8,7 +8,7 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      app: hystrix
+      app: payment
   template:
     metadata:
       creationTimestamp: null
