--- a/arquivos-kubernetes/mongodb.cronjob.yaml
+++ b/arquivos-kubernetes/mongodb.cronjob.yaml
@@ -21,4 +21,4 @@ spec:
           - name: mongodumps
             persistentVolumeClaim:
               claimName: mongodump-pv-claim
-          restartPolicy: Always
+          restartPolicy: OnFailure
